--- a/gui/settingsmenu.ui
+++ b/gui/settingsmenu.ui
@@ -68,10 +68,10 @@
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="layoutWidget">
+  <widget class="QWidget" name="layoutWidget2">
    <property name="geometry">
     <rect>
-     <x>300</x>
+     <x>260</x>
      <y>20</y>
      <width>141</width>
      <height>231</height>
@@ -137,10 +137,10 @@
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="layoutWidget">
+  <widget class="QWidget" name="layoutWidget3">
    <property name="geometry">
     <rect>
-     <x>310</x>
+     <x>280</x>
      <y>250</y>
      <width>107</width>
      <height>28</height>
@@ -163,7 +163,7 @@
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="layoutWidget">
+  <widget class="QWidget" name="layoutWidget4">
    <property name="geometry">
     <rect>
      <x>310</x>
@@ -175,6 +175,9 @@
    <layout class="QHBoxLayout" name="horizontalLayout_2">
     <item>
      <widget class="QPushButton" name="save_button">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
       <property name="text">
        <string>Save</string>
       </property>
@@ -184,6 +187,42 @@
      <widget class="QPushButton" name="cancel_button">
       <property name="text">
        <string>Cancel</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QWidget" name="layoutWidget5">
+   <property name="geometry">
+    <rect>
+     <x>410</x>
+     <y>20</y>
+     <width>82</width>
+     <height>231</height>
+    </rect>
+   </property>
+   <layout class="QVBoxLayout" name="verticalLayout_3">
+    <item>
+     <widget class="QPushButton" name="back_preview_button">
+      <property name="text">
+       <string>Preview</string>
+      </property>
+      <property name="checkable">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QPushButton" name="front_preview_button">
+      <property name="text">
+       <string>Preview</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QPushButton" name="bg_preview_button">
+      <property name="text">
+       <string>Preview</string>
       </property>
      </widget>
     </item>
