--- a/src/gui/settings_menu/settingsmenu.ui
+++ b/src/gui/settings_menu/settingsmenu.ui
@@ -13,13 +13,13 @@
   <property name="minimumSize">
    <size>
     <width>500</width>
-    <height>350</height>
+    <height>400</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>9999999</width>
-    <height>9999999</height>
+    <width>500</width>
+    <height>400</height>
    </size>
   </property>
   <property name="cursor">
@@ -72,6 +72,9 @@
       <property name="text">
        <string>Save</string>
       </property>
+      <property name="flat">
+       <bool>false</bool>
+      </property>
      </widget>
     </item>
     <item>
@@ -86,7 +89,7 @@
   <widget class="QLabel" name="card_back_preview">
    <property name="geometry">
     <rect>
-     <x>410</x>
+     <x>415</x>
      <y>20</y>
      <width>50</width>
      <height>80</height>
