--- a/src/gui/settings_menu/settingsmenu.ui
+++ b/src/gui/settings_menu/settingsmenu.ui
@@ -57,7 +57,7 @@
   <widget class="QWidget" name="layoutWidget4">
    <property name="geometry">
     <rect>
-     <x>310</x>
+     <x>320</x>
      <y>360</y>
      <width>175</width>
      <height>31</height>
@@ -206,6 +206,25 @@
    <property name="text">
     <string>Card Back Texture</string>
    </property>
+  </widget>
+  <widget class="QWidget" name="horizontalLayoutWidget">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>360</y>
+     <width>81</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout_4">
+    <item>
+     <widget class="QPushButton" name="about_button">
+      <property name="text">
+       <string>About</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
   </widget>
  </widget>
  <resources/>
