--- a/src/gui/about_window/aboutwindow.ui
+++ b/src/gui/about_window/aboutwindow.ui
@@ -32,7 +32,7 @@
    <property name="geometry">
     <rect>
      <x>90</x>
-     <y>20</y>
+     <y>10</y>
      <width>101</width>
      <height>101</height>
     </rect>
@@ -70,13 +70,13 @@ Merve Yıldırım</string>
    <property name="geometry">
     <rect>
      <x>60</x>
-     <y>120</y>
+     <y>110</y>
      <width>161</width>
      <height>31</height>
     </rect>
    </property>
    <property name="text">
-    <string>Match Match Game v1.06</string>
+    <string/>
    </property>
    <property name="textFormat">
     <enum>Qt::AutoText</enum>
@@ -88,14 +88,14 @@ Merve Yıldırım</string>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>10</x>
+     <x>15</x>
      <y>250</y>
      <width>251</width>
      <height>31</height>
     </rect>
    </property>
    <property name="text">
-    <string>This software is licensed under *** license</string>
+    <string>This software is licensed under GNU GPLv3.0</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
@@ -105,7 +105,7 @@ Merve Yıldırım</string>
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>150</y>
+     <y>140</y>
      <width>241</width>
      <height>21</height>
     </rect>
