--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -1,7 +1,8 @@
 <RCC>
     <qresource prefix="/">
         <file>../matchmatch_icon_original.png</file>
-        <file>../music/game_music.wav</file>
+        <file>../sounds/game_music.wav</file>
+		<file>../sounds/card_flip.wav</file>
         <file>../textures/background_textures/bg_1.png</file>
         <file>../textures/background_textures/bg_2.png</file>
         <file>../textures/background_textures/bg_3.png</file>
