--- a/src/gui/about_window/aboutwindow.ui
+++ b/src/gui/about_window/aboutwindow.ui
@@ -32,7 +32,7 @@
    <property name="geometry">
     <rect>
      <x>90</x>
-     <y>10</y>
+     <y>20</y>
      <width>101</width>
      <height>101</height>
     </rect>
@@ -47,7 +47,7 @@
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QLabel" name="devs">
+  <widget class="QLabel" name="developed_by">
    <property name="geometry">
     <rect>
      <x>60</x>
@@ -57,10 +57,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>Developers:
-
-Ahmed Taha Ergin
-Merve Yıldırım</string>
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Solely developed by &lt;span style=&quot; font-weight:700;&quot;&gt;sudosys&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
@@ -70,7 +67,7 @@ Merve Yıldırım</string>
    <property name="geometry">
     <rect>
      <x>60</x>
-     <y>110</y>
+     <y>120</y>
      <width>161</width>
      <height>31</height>
     </rect>
@@ -105,7 +102,7 @@ Merve Yıldırım</string>
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>140</y>
+     <y>160</y>
      <width>241</width>
      <height>21</height>
     </rect>
