--- a/src/game_table/gametable.ui
+++ b/src/game_table/gametable.ui
@@ -53,6 +53,19 @@
     <string/>
    </property>
   </widget>
+  <widget class="QLabel" name="combo">
+   <property name="geometry">
+    <rect>
+     <x>1120</x>
+     <y>10</y>
+     <width>151</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
