--- a/src/gui/about_window/aboutwindow.ui
+++ b/src/gui/about_window/aboutwindow.ui
@@ -50,10 +50,10 @@
   <widget class="QLabel" name="developed_by">
    <property name="geometry">
     <rect>
-     <x>60</x>
-     <y>180</y>
-     <width>161</width>
-     <height>61</height>
+     <x>0</x>
+     <y>190</y>
+     <width>281</width>
+     <height>21</height>
     </rect>
    </property>
    <property name="text">
@@ -66,9 +66,9 @@
   <widget class="QLabel" name="game_name">
    <property name="geometry">
     <rect>
-     <x>60</x>
+     <x>0</x>
      <y>120</y>
-     <width>161</width>
+     <width>281</width>
      <height>31</height>
     </rect>
    </property>
@@ -85,14 +85,14 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>15</x>
+     <x>5</x>
      <y>250</y>
-     <width>251</width>
+     <width>271</width>
      <height>31</height>
     </rect>
    </property>
    <property name="text">
-    <string>This software is licensed under GNU GPLv3.0</string>
+    <string>Licensed under GNU GPLv3.0</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
@@ -101,9 +101,9 @@
   <widget class="QLabel" name="build_date_time">
    <property name="geometry">
     <rect>
-     <x>20</x>
+     <x>0</x>
      <y>160</y>
-     <width>241</width>
+     <width>281</width>
      <height>21</height>
     </rect>
    </property>
